# satysfi-karnaugh

./: LICENSE  Makefile  README.md  Satyristes  karnaugh.satyh  satysfi-karnaugh-doc.opam  satysfi-karnaugh.opam
examples/: .gitignore  Makefile  examples.saty  karnaugh-examples.saty
