opam-version: "2.0"
name:         "satysfi-karnaugh"
version:      "0.0.1"
synopsis:     "Drawing Karnaugh maps in SATySFi"
description:  """
Drawing Karnaugh maps in SATySFi

This can be installed as a package for SATySFi by Satyrographos. (https://github.com/na4zagin3/satyrographos) 
"""
maintainer:   "takagiy <takagiy.4dev@gmail.com>"
authors:      "takagiy <takagiy.4dev@gmail.com>"
homepage:     "https://github.com/takagiy/satysfi-karnaugh"
bug-reports:  "https://github.com/takagiy/satysfi-karnaugh/issues"
dev-repo:     "git+https://github.com/takagiy/satysfi-karnaugh.git"
license:      "MIT"
depends: [
  "satyrographos" {>= "0.0.1" & < "0.0.2"}
]
build: []
install: [
  [make "-f" "Makefile" "install" "PREFIX=%{prefix}%"]
]
remove: [
  [make "-f" "Makefile" "uninstall" "PREFIX=%{prefix}%"]
]
